--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="floating-bubble">
         <p>Quer sua Key sem esperar um minuto?</p>
-        <a href="https://www.ggmax.com.br/anuncio/o-primo-34-seu-up-de-xp-mais-rapido-34" target="_blank">Acesse GGMax!</a>
+        <a href="https://discord.gg/Ea4rYAFs" target="_blank">Acesse o Nosso discord!</a>
     </div>
 
     <div class="main-layout"> 
@@ -80,4 +80,5 @@
 </body>
 
 </html>
+
 
